# bevy_outline

./: CONTRIBUTERS  Cargo.toml  LICENSE  README.md
examples/: cube.rs  picking.rs  scene.rs
src/: lib.rs  picking.rs  prepare.rs  smooth_normal.rs  window_size.rs
src/render/: outline.wgsl
