[package]
name = "bevy_outline"
description = "Pixel-Perfect Outline Shader for Bevy"
homepage = "https://github.com/YoshieraHuang/bevy_outline"
repository = "https://github.com/YoshieraHuang/bevy_outline"
version = "0.2.0"
edition = "2021"
license = "MIT"
keywords = ["bevy", "shader"]
categories = [ "game-development" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false, features = [
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr"
]}
wgpu-types = "0.12.0"
ordered-float = "2.0"
bevy_mod_picking = { version = "0.6", optional = true }

[features]
default = [ ]
picking = [ "bevy_mod_picking" ]

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", features = [ "dynamic" ]}
# bevy_obj = "0.7.0"

[[example]]
name = "scene"
path = "examples/scene.rs"

[[example]]
name = "picking"
path = "examples/picking.rs"
required-features = [ "picking" ]
