[package]
name = "bevy_outline"
description = "Pixel-Perfect Outline Shader for Bevy"
homepage = "https://github.com/YoshieraHuang/bevy_outline"
repository = "https://github.com/YoshieraHuang/bevy_outline"
version = "0.2.0"
edition = "2021"
license = "MIT"
keywords = ["bevy", "shader"]
categories = [ "game-development" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.1", features = [
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr"
]}
wgpu-types = "0.14.1"
bevy_mod_picking = { version = "0.11", optional = true }

[features]
default = [ ]
picking = [ "bevy_mod_picking" ]

[dev-dependencies]
bevy = { version = "0.9.1", features = [ "dynamic" ]}

[[example]]
name = "scene"
path = "examples/scene.rs"

[[example]]
name = "picking"
path = "examples/picking.rs"
required-features = [ "picking" ]
